# tarkoidle

./: WeaponClass.py  WeaponEnums.py  main.py  pyproject.toml
tarkoidle/: __init__.py
tarkoidle/config/: player.py
tarkoidle/data/: skill.py  weapon.py
tarkoidle/discord/: user.py
tarkoidle/discord/commands/: raid.py  register.py
tarkoidle/enums/: equipment.py  item.py  item_slot.py  skill.py  trader.py  weapon.py  weather.py
tarkoidle/models/: character.py  game.py  hideout.py  inventory.py  inventory_container.py  inventory_item.py  inventory_player.py  item.py  player.py  skill.py  stash.py  task.py  world.py
tarkoidle/twitch/: user.py
tarkoidle/utils/: game_time.py
tarkovdiscbot/: __main__.py
tarkovdiscbot/discord/: bot.py
tarkovdiscbot/discord/commands/: raid.py
tarkovdiscbot/enums/: maps.py  weapon.py
tarkovdiscbot/models/: weapon.py
tarkovdiscbot/utils/: emoji.py
